julia_experiments/_cimgui.h

typedef char* va_list;
typedef char bool;
typedef unsigned int ImU32;
     
typedef void* ImTextureID;
          
typedef ImU32 ImGuiID;
             
typedef int ImGuiColorEditMode;
struct ImVec2
{
    float x, y;
};
struct ImVec4
{
    float x, y, z, w;
};
typedef int ImGuiColorEditMode;
extern ImGuiID          igGetIdStr(const char* str_id);
extern ImGuiID          igGetIdStrRange(const char* str_begin,const char* str_end);
extern ImGuiID          igGetIdPtr(const void* ptr_id);
extern void             igTextV(const char* fmt, va_list args);
extern void             igTextColoredV(const struct ImVec4 col, const char* fmt, va_list args);
extern void             igTextDisabledV(const char* fmt, va_list args);
extern void             igTextWrappedV(const char* fmt, va_list args);
extern void             igTextUnformatted(const char* text, const char* text_end);
extern void             igLabelTextV(const char* label, const char* fmt, va_list args);
extern void             igBullet(void);
extern void             igBulletTextV(const char* fmt, va_list args);
extern bool             igButton(const char* label, const struct ImVec2 size);
extern bool             igSmallButton(const char* label);
extern bool             igInvisibleButton(const char* str_id, const struct ImVec2 size);
extern void             igImage(ImTextureID user_texture_id, const struct ImVec2 size, const struct ImVec2 uv0, const struct ImVec2 uv1, const struct ImVec4 tint_col, const struct ImVec4 border_col);
extern bool             igImageButton(ImTextureID user_texture_id, const struct ImVec2 size, const struct ImVec2 uv0, const struct ImVec2 uv1, int frame_padding, const struct ImVec4 bg_col, const struct ImVec4 tint_col);
extern bool             igCollapsingHeader(const char* label, const char* str_id, bool display_frame, bool default_open);
extern bool             igCheckbox(const char* label, bool* v);
extern bool             igCheckboxFlags(const char* label, unsigned int* flags, unsigned int flags_value);
extern bool             igRadioButtonBool(const char* label, bool active);
extern bool             igRadioButton(const char* label, int* v, int v_button);
extern bool             igCombo(const char* label, int* current_item, const char** items, int items_count, int height_in_items);
extern bool             igCombo2(const char* label, int* current_item, const char* items_separated_by_zeros, int height_in_items);
extern bool             igCombo3(const char* label, int* current_item, bool(*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count, int height_in_items);
extern bool             igColorButton(const struct ImVec4 col, bool small_height, bool outline_border);
extern bool             igColorEdit3(const char* label, float col[]);
extern bool             igColorEdit4(const char* label, float col[], bool show_alpha);
extern void             igColorEditMode(ImGuiColorEditMode mode);
extern void             igPlotLines(const char* label, const float* values, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, struct ImVec2 graph_size, int stride);
extern void             igPlotLines2(const char* label, float(*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, struct ImVec2 graph_size);
extern void             igPlotHistogram(const char* label, const float* values, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, struct ImVec2 graph_size, int stride);
extern void             igPlotHistogram2(const char* label, float(*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, struct ImVec2 graph_size);
extern void             igProgressBar(float fraction, const struct ImVec2* size_arg, const char* overlay);
extern bool             igSliderFloat(const char* label, float* v, float v_min, float v_max, const char* display_format, float power);
extern bool             igSliderFloat2(const char* label, float v[], float v_min, float v_max, const char* display_format, float power);
extern bool             igSliderFloat3(const char* label, float v[], float v_min, float v_max, const char* display_format, float power);
extern bool             igSliderFloat4(const char* label, float v[], float v_min, float v_max, const char* display_format, float power);
extern bool             igSliderAngle(const char* label, float* v_rad, float v_degrees_min, float v_degrees_max);
extern bool             igSliderInt(const char* label, int* v, int v_min, int v_max, const char* display_format);
extern bool             igSliderInt2(const char* label, int v[], int v_min, int v_max, const char* display_format);
extern bool             igSliderInt3(const char* label, int v[], int v_min, int v_max, const char* display_format);
extern bool             igSliderInt4(const char* label, int v[], int v_min, int v_max, const char* display_format);
extern bool             igVSliderFloat(const char* label, const struct ImVec2 size, float* v, float v_min, float v_max, const char* display_format, float power);
extern bool             igVSliderInt(const char* label, const struct ImVec2 size, int* v, int v_min, int v_max, const char* display_format);
extern bool             igDragFloat(const char* label, float* v, float v_speed, float v_min, float v_max, const char* display_format, float power);
     
extern bool             igDragFloat2(const char* label, float v[], float v_speed, float v_min, float v_max, const char* display_format, float power);
extern bool             igDragFloat3(const char* label, float v[], float v_speed, float v_min, float v_max, const char* display_format, float power);
extern bool             igDragFloat4(const char* label, float v[], float v_speed, float v_min, float v_max, const char* display_format, float power);
extern bool             igDragFloatRange2(const char* label, float* v_current_min, float* v_current_max, float v_speed/*=1.0f*/, float v_min/*=0.0f*/, float v_max/*=0.0f*/, const char* display_format/* = "%.3f"*/, const char* display_format_max /*= 0*/, float power/*=1.0f*/);
extern bool             igDragInt(const char* label, int* v, float v_speed, int v_min, int v_max, const char* display_format);
                                       
extern bool             igDragInt2(const char* label, int v[], float v_speed, int v_min, int v_max, const char* display_format);
extern bool             igDragInt3(const char* label, int v[], float v_speed, int v_min, int v_max, const char* display_format);
extern bool             igDragInt4(const char* label, int v[], float v_speed, int v_min, int v_max, const char* display_format);
extern bool             igListBox2(const char* label, int* current_item, bool(*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count, int height_in_items);