julia_experiments/cimgui.jl


function igGetIdStr(str_id::Ptr{UInt8})
    ccall((:igGetIdStr,cimgui),ImGuiID,(Ptr{UInt8},),str_id)
end

function igGetIdStrRange(str_begin::Ptr{UInt8},str_end::Ptr{UInt8})
    ccall((:igGetIdStrRange,cimgui),ImGuiID,(Ptr{UInt8},Ptr{UInt8}),str_begin,str_end)
end

function igGetIdPtr(ptr_id::Ptr{Void})
    ccall((:igGetIdPtr,cimgui),ImGuiID,(Ptr{Void},),ptr_id)
end

function igTextV(fmt::Ptr{UInt8},args::va_list)
    ccall((:igTextV,cimgui),Void,(Ptr{UInt8},va_list),fmt,args)
end

function igTextColoredV(col::ImVec4,fmt::Ptr{UInt8},args::va_list)
    ccall((:igTextColoredV,cimgui),Void,(ImVec4,Ptr{UInt8},va_list),col,fmt,args)
end

function igTextDisabledV(fmt::Ptr{UInt8},args::va_list)
    ccall((:igTextDisabledV,cimgui),Void,(Ptr{UInt8},va_list),fmt,args)
end

function igTextWrappedV(fmt::Ptr{UInt8},args::va_list)
    ccall((:igTextWrappedV,cimgui),Void,(Ptr{UInt8},va_list),fmt,args)
end

function igTextUnformatted(text::Ptr{UInt8},text_end::Ptr{UInt8})
    ccall((:igTextUnformatted,cimgui),Void,(Ptr{UInt8},Ptr{UInt8}),text,text_end)
end

function igLabelTextV(label::Ptr{UInt8},fmt::Ptr{UInt8},args::va_list)
    ccall((:igLabelTextV,cimgui),Void,(Ptr{UInt8},Ptr{UInt8},va_list),label,fmt,args)
end

function igBullet()
    ccall((:igBullet,cimgui),Void,())
end

function igBulletTextV(fmt::Ptr{UInt8},args::va_list)
    ccall((:igBulletTextV,cimgui),Void,(Ptr{UInt8},va_list),fmt,args)
end

function igButton(label::ASCIIString,size::ImVec2)
    ccall((:igButton,cimgui),bool,(Cstring,ImVec2),label,size)
end

function igSmallButton(label::Ptr{UInt8})
    ccall((:igSmallButton,cimgui),bool,(Ptr{UInt8},),label)
end

function igInvisibleButton(str_id::Ptr{UInt8},size::ImVec2)
    ccall((:igInvisibleButton,cimgui),bool,(Ptr{UInt8},ImVec2),str_id,size)
end

function igImage(user_texture_id::ImTextureID,size::ImVec2,uv0::ImVec2,uv1::ImVec2,tint_col::ImVec4,border_col::ImVec4)
    ccall((:igImage,cimgui),Void,(ImTextureID,ImVec2,ImVec2,ImVec2,ImVec4,ImVec4),user_texture_id,size,uv0,uv1,tint_col,border_col)
end

function igImageButton(user_texture_id::ImTextureID,size::ImVec2,uv0::ImVec2,uv1::ImVec2,frame_padding::Cint,bg_col::ImVec4,tint_col::ImVec4)
    ccall((:igImageButton,cimgui),bool,(ImTextureID,ImVec2,ImVec2,ImVec2,Cint,ImVec4,ImVec4),user_texture_id,size,uv0,uv1,frame_padding,bg_col,tint_col)
end

function igCollapsingHeader(label::Ptr{UInt8},str_id::Ptr{UInt8},display_frame::bool,default_open::bool)
    ccall((:igCollapsingHeader,cimgui),bool,(Ptr{UInt8},Ptr{UInt8},bool,bool),label,str_id,display_frame,default_open)
end

function igCheckbox(label::Ptr{UInt8},v::Ptr{bool})
    ccall((:igCheckbox,cimgui),bool,(Ptr{UInt8},Ptr{bool}),label,v)
end

function igCheckboxFlags(label::Ptr{UInt8},flags::Ptr{UInt32},flags_value::UInt32)
    ccall((:igCheckboxFlags,cimgui),bool,(Ptr{UInt8},Ptr{UInt32},UInt32),label,flags,flags_value)
end

function igRadioButtonBool(label::Ptr{UInt8},active::bool)
    ccall((:igRadioButtonBool,cimgui),bool,(Ptr{UInt8},bool),label,active)
end

function igRadioButton(label::Ptr{UInt8},v::Ptr{Cint},v_button::Cint)
    ccall((:igRadioButton,cimgui),bool,(Ptr{UInt8},Ptr{Cint},Cint),label,v,v_button)
end

function igCombo(label::Ptr{UInt8},current_item::Ptr{Cint},items::Ptr{Ptr{UInt8}},items_count::Cint,height_in_items::Cint)
    ccall((:igCombo,cimgui),bool,(Ptr{UInt8},Ptr{Cint},Ptr{Ptr{UInt8}},Cint,Cint),label,current_item,items,items_count,height_in_items)
end

function igCombo2(label::Ptr{UInt8},current_item::Ptr{Cint},items_separated_by_zeros::Ptr{UInt8},height_in_items::Cint)
    ccall((:igCombo2,cimgui),bool,(Ptr{UInt8},Ptr{Cint},Ptr{UInt8},Cint),label,current_item,items_separated_by_zeros,height_in_items)
end

function igCombo3(label::Ptr{UInt8},current_item::Ptr{Cint},items_getter::Ptr{Void},data::Ptr{Void},items_count::Cint,height_in_items::Cint)
    ccall((:igCombo3,cimgui),bool,(Ptr{UInt8},Ptr{Cint},Ptr{Void},Ptr{Void},Cint,Cint),label,current_item,items_getter,data,items_count,height_in_items)
end

function igColorButton(col::ImVec4,small_height::bool,outline_border::bool)
    ccall((:igColorButton,cimgui),bool,(ImVec4,bool,bool),col,small_height,outline_border)
end

function igColorEdit3(label::Ptr{UInt8},col::Ptr{Cfloat})
    ccall((:igColorEdit3,cimgui),bool,(Ptr{UInt8},Ptr{Cfloat}),label,col)
end

function igColorEdit4(label::Ptr{UInt8},col::Ptr{Cfloat},show_alpha::bool)
    ccall((:igColorEdit4,cimgui),bool,(Ptr{UInt8},Ptr{Cfloat},bool),label,col,show_alpha)
end

function igColorEditMode(mode::ImGuiColorEditMode)
    ccall((:igColorEditMode,cimgui),Void,(ImGuiColorEditMode,),mode)
end

function igPlotLines(label::Ptr{UInt8},values::Ptr{Cfloat},values_count::Cint,values_offset::Cint,overlay_text::Ptr{UInt8},scale_min::Cfloat,scale_max::Cfloat,graph_size::ImVec2,stride::Cint)
    ccall((:igPlotLines,cimgui),Void,(Ptr{UInt8},Ptr{Cfloat},Cint,Cint,Ptr{UInt8},Cfloat,Cfloat,ImVec2,Cint),label,values,values_count,values_offset,overlay_text,scale_min,scale_max,graph_size,stride)
end

function igPlotLines2(label::Ptr{UInt8},values_getter::Ptr{Void},data::Ptr{Void},values_count::Cint,values_offset::Cint,overlay_text::Ptr{UInt8},scale_min::Cfloat,scale_max::Cfloat,graph_size::ImVec2)
    ccall((:igPlotLines2,cimgui),Void,(Ptr{UInt8},Ptr{Void},Ptr{Void},Cint,Cint,Ptr{UInt8},Cfloat,Cfloat,ImVec2),label,values_getter,data,values_count,values_offset,overlay_text,scale_min,scale_max,graph_size)
end

function igPlotHistogram(label::Ptr{UInt8},values::Ptr{Cfloat},values_count::Cint,values_offset::Cint,overlay_text::Ptr{UInt8},scale_min::Cfloat,scale_max::Cfloat,graph_size::ImVec2,stride::Cint)
    ccall((:igPlotHistogram,cimgui),Void,(Ptr{UInt8},Ptr{Cfloat},Cint,Cint,Ptr{UInt8},Cfloat,Cfloat,ImVec2,Cint),label,values,values_count,values_offset,overlay_text,scale_min,scale_max,graph_size,stride)
end

function igPlotHistogram2(label::Ptr{UInt8},values_getter::Ptr{Void},data::Ptr{Void},values_count::Cint,values_offset::Cint,overlay_text::Ptr{UInt8},scale_min::Cfloat,scale_max::Cfloat,graph_size::ImVec2)
    ccall((:igPlotHistogram2,cimgui),Void,(Ptr{UInt8},Ptr{Void},Ptr{Void},Cint,Cint,Ptr{UInt8},Cfloat,Cfloat,ImVec2),label,values_getter,data,values_count,values_offset,overlay_text,scale_min,scale_max,graph_size)
end

function igProgressBar(fraction::Cfloat,size_arg::Ptr{ImVec2},overlay::Ptr{UInt8})
    ccall((:igProgressBar,cimgui),Void,(Cfloat,Ptr{ImVec2},Ptr{UInt8}),fraction,size_arg,overlay)
end

function igSliderFloat(label::Ptr{UInt8},v::Ptr{Cfloat},v_min::Cfloat,v_max::Cfloat,display_format::Ptr{UInt8},power::Cfloat)
    ccall((:igSliderFloat,cimgui),bool,(Ptr{UInt8},Ptr{Cfloat},Cfloat,Cfloat,Ptr{UInt8},Cfloat),label,v,v_min,v_max,display_format,power)
end

function igSliderFloat2(label::Ptr{UInt8},v::Ptr{Cfloat},v_min::Cfloat,v_max::Cfloat,display_format::Ptr{UInt8},power::Cfloat)
    ccall((:igSliderFloat2,cimgui),bool,(Ptr{UInt8},Ptr{Cfloat},Cfloat,Cfloat,Ptr{UInt8},Cfloat),label,v,v_min,v_max,display_format,power)
end

function igSliderFloat3(label::Ptr{UInt8},v::Ptr{Cfloat},v_min::Cfloat,v_max::Cfloat,display_format::Ptr{UInt8},power::Cfloat)
    ccall((:igSliderFloat3,cimgui),bool,(Ptr{UInt8},Ptr{Cfloat},Cfloat,Cfloat,Ptr{UInt8},Cfloat),label,v,v_min,v_max,display_format,power)
end

function igSliderFloat4(label::Ptr{UInt8},v::Ptr{Cfloat},v_min::Cfloat,v_max::Cfloat,display_format::Ptr{UInt8},power::Cfloat)
    ccall((:igSliderFloat4,cimgui),bool,(Ptr{UInt8},Ptr{Cfloat},Cfloat,Cfloat,Ptr{UInt8},Cfloat),label,v,v_min,v_max,display_format,power)
end

function igSliderAngle(label::Ptr{UInt8},v_rad::Ptr{Cfloat},v_degrees_min::Cfloat,v_degrees_max::Cfloat)
    ccall((:igSliderAngle,cimgui),bool,(Ptr{UInt8},Ptr{Cfloat},Cfloat,Cfloat),label,v_rad,v_degrees_min,v_degrees_max)
end

function igSliderInt(label::Ptr{UInt8},v::Ptr{Cint},v_min::Cint,v_max::Cint,display_format::Ptr{UInt8})
    ccall((:igSliderInt,cimgui),bool,(Ptr{UInt8},Ptr{Cint},Cint,Cint,Ptr{UInt8}),label,v,v_min,v_max,display_format)
end

function igSliderInt2(label::Ptr{UInt8},v::Ptr{Cint},v_min::Cint,v_max::Cint,display_format::Ptr{UInt8})
    ccall((:igSliderInt2,cimgui),bool,(Ptr{UInt8},Ptr{Cint},Cint,Cint,Ptr{UInt8}),label,v,v_min,v_max,display_format)
end

function igSliderInt3(label::Ptr{UInt8},v::Ptr{Cint},v_min::Cint,v_max::Cint,display_format::Ptr{UInt8})
    ccall((:igSliderInt3,cimgui),bool,(Ptr{UInt8},Ptr{Cint},Cint,Cint,Ptr{UInt8}),label,v,v_min,v_max,display_format)
end

function igSliderInt4(label::Ptr{UInt8},v::Ptr{Cint},v_min::Cint,v_max::Cint,display_format::Ptr{UInt8})
    ccall((:igSliderInt4,cimgui),bool,(Ptr{UInt8},Ptr{Cint},Cint,Cint,Ptr{UInt8}),label,v,v_min,v_max,display_format)
end

function igVSliderFloat(label::Ptr{UInt8},size::ImVec2,v::Ptr{Cfloat},v_min::Cfloat,v_max::Cfloat,display_format::Ptr{UInt8},power::Cfloat)
    ccall((:igVSliderFloat,cimgui),bool,(Ptr{UInt8},ImVec2,Ptr{Cfloat},Cfloat,Cfloat,Ptr{UInt8},Cfloat),label,size,v,v_min,v_max,display_format,power)
end

function igVSliderInt(label::Ptr{UInt8},size::ImVec2,v::Ptr{Cint},v_min::Cint,v_max::Cint,display_format::Ptr{UInt8})
    ccall((:igVSliderInt,cimgui),bool,(Ptr{UInt8},ImVec2,Ptr{Cint},Cint,Cint,Ptr{UInt8}),label,size,v,v_min,v_max,display_format)
end

function igDragFloat(label::Ptr{UInt8},v::Ptr{Cfloat},v_speed::Cfloat,v_min::Cfloat,v_max::Cfloat,display_format::Ptr{UInt8},power::Cfloat)
    ccall((:igDragFloat,cimgui),bool,(Ptr{UInt8},Ptr{Cfloat},Cfloat,Cfloat,Cfloat,Ptr{UInt8},Cfloat),label,v,v_speed,v_min,v_max,display_format,power)
end

function igDragFloat2(label::Ptr{UInt8},v::Ptr{Cfloat},v_speed::Cfloat,v_min::Cfloat,v_max::Cfloat,display_format::Ptr{UInt8},power::Cfloat)
    ccall((:igDragFloat2,cimgui),bool,(Ptr{UInt8},Ptr{Cfloat},Cfloat,Cfloat,Cfloat,Ptr{UInt8},Cfloat),label,v,v_speed,v_min,v_max,display_format,power)
end

function igDragFloat3(label::Ptr{UInt8},v::Ptr{Cfloat},v_speed::Cfloat,v_min::Cfloat,v_max::Cfloat,display_format::Ptr{UInt8},power::Cfloat)
    ccall((:igDragFloat3,cimgui),bool,(Ptr{UInt8},Ptr{Cfloat},Cfloat,Cfloat,Cfloat,Ptr{UInt8},Cfloat),label,v,v_speed,v_min,v_max,display_format,power)
end

function igDragFloat4(label::Ptr{UInt8},v::Ptr{Cfloat},v_speed::Cfloat,v_min::Cfloat,v_max::Cfloat,display_format::Ptr{UInt8},power::Cfloat)
    ccall((:igDragFloat4,cimgui),bool,(Ptr{UInt8},Ptr{Cfloat},Cfloat,Cfloat,Cfloat,Ptr{UInt8},Cfloat),label,v,v_speed,v_min,v_max,display_format,power)
end

function igDragFloatRange2(label::Ptr{UInt8},v_current_min::Ptr{Cfloat},v_current_max::Ptr{Cfloat},v_speed::Cfloat,v_min::Cfloat,v_max::Cfloat,display_format::Ptr{UInt8},display_format_max::Ptr{UInt8},power::Cfloat)
    ccall((:igDragFloatRange2,cimgui),bool,(Ptr{UInt8},Ptr{Cfloat},Ptr{Cfloat},Cfloat,Cfloat,Cfloat,Ptr{UInt8},Ptr{UInt8},Cfloat),label,v_current_min,v_current_max,v_speed,v_min,v_max,display_format,display_format_max,power)
end

function igDragInt(label::Ptr{UInt8},v::Ptr{Cint},v_speed::Cfloat,v_min::Cint,v_max::Cint,display_format::Ptr{UInt8})
    ccall((:igDragInt,cimgui),bool,(Ptr{UInt8},Ptr{Cint},Cfloat,Cint,Cint,Ptr{UInt8}),label,v,v_speed,v_min,v_max,display_format)
end

function igDragInt2(label::Ptr{UInt8},v::Ptr{Cint},v_speed::Cfloat,v_min::Cint,v_max::Cint,display_format::Ptr{UInt8})
    ccall((:igDragInt2,cimgui),bool,(Ptr{UInt8},Ptr{Cint},Cfloat,Cint,Cint,Ptr{UInt8}),label,v,v_speed,v_min,v_max,display_format)
end

function igDragInt3(label::Ptr{UInt8},v::Ptr{Cint},v_speed::Cfloat,v_min::Cint,v_max::Cint,display_format::Ptr{UInt8})
    ccall((:igDragInt3,cimgui),bool,(Ptr{UInt8},Ptr{Cint},Cfloat,Cint,Cint,Ptr{UInt8}),label,v,v_speed,v_min,v_max,display_format)
end

function igDragInt4(label::Ptr{UInt8},v::Ptr{Cint},v_speed::Cfloat,v_min::Cint,v_max::Cint,display_format::Ptr{UInt8})
    ccall((:igDragInt4,cimgui),bool,(Ptr{UInt8},Ptr{Cint},Cfloat,Cint,Cint,Ptr{UInt8}),label,v,v_speed,v_min,v_max,display_format)
end
